--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "buster-istanbul": "0.1.13",
     "grunt": "0.4.5",
     "grunt-buster": "0.3.2",
+    "grunt-cli": "0.1.13",
     "jscs": "1.11.3",
     "phantomjs": "1.9.15"
   },
