--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "wrapple",
   "version": "0.2.0",
-  "description": "Wrapper for browser natives to allow stubbing in unit tests.",
+  "description": "Wrapper for runtime natives to allow stubbing in unit tests.",
   "main": "lib/wrapple.js",
   "directories": {
     "test": "test"
@@ -10,16 +10,12 @@
   "devDependencies": {
     "buster": "0.7.18",
     "buster-istanbul": "0.1.13",
-    "grunt": "0.4.5",
-    "grunt-buster": "0.3.2",
-    "grunt-cli": "0.1.13",
     "jscs": "1.11.3",
     "phantomjs": "1.9.15"
   },
   "scripts": {
     "lint": "jscs **/*.js",
-    "buster": "grunt buster",
-    "test": "npm run lint && npm run buster"
+    "test": "./scripts/run-tests"
   },
   "repository": {
     "type": "git",
